gitops-certification-examples/canary-app-manual/service-preview.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: rollout-canary-preview
  labels:
    app: summer-k8s-app  
spec:
  type: ClusterIP
  selector:
    app: summer-k8s-app
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
