gitops-certification-examples/canary-app-manual/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: demo-ingress
  namespace: default

spec:
  entryPoints:
    - web
  routes:
  - match: PathPrefix(`/`)
    kind: Rule
    services:
    - name: traefik-service
      namespace: default
      kind: TraefikService
